@@ -2,6 +2,7 @@ package core.diagram.service;
 
 import co.elastic.clients.elasticsearch._types.aggregations.Aggregation;
 import co.elastic.clients.elasticsearch._types.query_dsl.Query;
+import co.elastic.clients.elasticsearch._types.query_dsl.QueryBuilders;
 import core.framework.inject.Inject;
 import core.framework.search.ElasticSearchType;
 import core.framework.search.SearchRequest;
@@ -12,9 +13,8 @@ import core.log.domain.ActionDocument;
 
 import java.time.ZonedDateTime;
 import java.util.List;
-import java.util.Set;
 
-import static core.framework.search.query.Queries.ids;
+import static core.framework.search.query.Queries.range;
 import static core.framework.search.query.Queries.terms;
 
 /**
@@ -24,19 +24,31 @@ public class DiagramService {
     @Inject
     ElasticSearchType<ActionDocument> actionType;
 
-    public String arch(int hours, Set<String> excludeApps) {
+    public String arch(int hours, List<String> includeApps, List<String> excludeApps) {
         var request = new SearchRequest();
         request.index = "action-*";
-        request.query = new Query.Builder().range(Queries.range("@timestamp", ZonedDateTime.now().minusHours(hours), null)).build();
+        request.query = query(hours, includeApps, excludeApps);
         request.limit = 0;
         request.aggregations.put("app", Aggregation.of(a -> a.terms(t -> t.field("app").size(100))
             .aggregations("action", sub1 -> sub1.terms(t -> t.field("action").size(500))
                 .aggregations("client", sub2 -> sub2.terms(t -> t.field("client").size(100))))));
         SearchResponse<ActionDocument> searchResponse = actionType.search(request);
 
-        var diagram = new ArchDiagram(excludeApps);
+        var diagram = new ArchDiagram();
         diagram.load(searchResponse);
         return diagram.dot();
+    }
+
+    private Query query(int hours, List<String> includeApps, List<String> excludeApps) {
+        var query = QueryBuilders.bool().must(range("@timestamp", ZonedDateTime.now().minusHours(hours), null));
+        if (!includeApps.isEmpty()) {
+            query.must(b -> b.bool(q -> q.should(terms("app", includeApps))
+                .should(terms("client", includeApps))));
+        } else if (!excludeApps.isEmpty()) {
+            query.mustNot(terms("app", excludeApps))
+                .mustNot(terms("client", excludeApps));
+        }
+        return query.build()._toQuery();
     }
 
     public String action(String actionId) {
@@ -53,16 +65,16 @@ public class DiagramService {
     private ActionDocument getActionById(String id) {
         var request = new SearchRequest();
         request.index = "action-*";
-        request.query = new Query.Builder().ids(ids(List.of(id))).build();
+        request.query = Queries.ids(List.of(id));
         List<ActionDocument> documents = actionType.search(request).hits;
         if (documents.isEmpty()) throw new NotFoundException("action not found, id=" + id);
-        return documents.get(0);
+        return documents.getFirst();
     }
 
     private List<ActionDocument> findActionByCorrelationIds(List<String> correlationIds) {
         var request = new SearchRequest();
         request.index = "action-*";
-        request.query = new Query.Builder().terms(terms("correlation_id", correlationIds)).build();
+        request.query = terms("correlation_id", correlationIds);
         request.limit = 10000;
         return actionType.search(request).hits;
     }
